# electra

./: LICENCE  README.md  package-lock.json  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
